@startuml ClassDiagram_Model

' =====================================================
'  SO DO LOP - TANG MODEL (6 lop POJO)
'  He thong Quan ly Ban Sua
' =====================================================

skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 45
skinparam shadowing false

class TaiKhoan {
    - id : int
    - tenDangNhap : String
    - matKhau : String
    - vaiTro : String
    __
    + TaiKhoan()
    + TaiKhoan(id, tenDangNhap, matKhau, vaiTro)
    + TaiKhoan(tenDangNhap, matKhau, vaiTro)
    + getId() : int
    + setId(id : int) : void
    + getTenDangNhap() : String
    + setTenDangNhap(s : String) : void
    + getMatKhau() : String
    + setMatKhau(s : String) : void
    + getVaiTro() : String
    + setVaiTro(s : String) : void
    + toString() : String
}

class NhanVien {
    - id : int
    - hoTen : String
    - sdt : String
    - diaChi : String
    - ngaySinh : Date
    - gioiTinh : String
    - idTaiKhoan : int
    __
    + NhanVien()
    + NhanVien(id, hoTen, sdt, diaChi, ngaySinh, gioiTinh, idTaiKhoan)
    + getId() : int
    + setId(id : int) : void
    + getHoTen() : String
    + setHoTen(s : String) : void
    + getSdt() : String
    + setSdt(s : String) : void
    + getDiaChi() : String
    + setDiaChi(s : String) : void
    + getNgaySinh() : Date
    + setNgaySinh(d : Date) : void
    + getGioiTinh() : String
    + setGioiTinh(s : String) : void
    + getIdTaiKhoan() : int
    + setIdTaiKhoan(id : int) : void
}

class SanPham {
    - id : int
    - tenSP : String
    - loai : String
    - thuongHieu : String
    - donGia : double
    - soLuong : int
    - moTa : String
    - ngaySanXuat : Date
    - hanSuDung : Date
    __
    + SanPham()
    + SanPham(tenSP, loai, thuongHieu, donGia, soLuong, moTa, nsx, hsd)
    + SanPham(id, tenSP, loai, thuongHieu, donGia, soLuong, moTa, nsx, hsd)
    + getId() : int
    + setId(id : int) : void
    + getTenSP() : String
    + setTenSP(s : String) : void
    + getLoai() : String
    + setLoai(s : String) : void
    + getThuongHieu() : String
    + setThuongHieu(s : String) : void
    + getDonGia() : double
    + setDonGia(d : double) : void
    + getSoLuong() : int
    + setSoLuong(n : int) : void
    + getMoTa() : String
    + setMoTa(s : String) : void
    + getNgaySanXuat() : Date
    + setNgaySanXuat(d : Date) : void
    + getHanSuDung() : Date
    + setHanSuDung(d : Date) : void
}

class KhachHang {
    - id : int
    - hoTen : String
    - sdt : String
    - diaChi : String
    - diemTichLuy : int
    __
    + KhachHang()
    + KhachHang(id, hoTen, sdt, diaChi, diemTichLuy)
    + getId() : int
    + setId(id : int) : void
    + getHoTen() : String
    + setHoTen(s : String) : void
    + getSdt() : String
    + setSdt(s : String) : void
    + getDiaChi() : String
    + setDiaChi(s : String) : void
    + getDiemTichLuy() : int
    + setDiemTichLuy(n : int) : void
    + getHang() : String
    + getTyLeGiam() : double
    + toString() : String
}

class HoaDon {
    - id : int
    - idNhanVien : int
    - idKhachHang : int
    - ngayLap : LocalDateTime
    - tongTien : double
    __
    + HoaDon()
    + HoaDon(idNhanVien, idKhachHang, tongTien)
    + getId() : int
    + setId(id : int) : void
    + getIdNhanVien() : int
    + setIdNhanVien(id : int) : void
    + getIdKhachHang() : int
    + setIdKhachHang(id : int) : void
    + getNgayLap() : LocalDateTime
    + setNgayLap(d : LocalDateTime) : void
    + getTongTien() : double
    + setTongTien(t : double) : void
}

class ChiTietHoaDon {
    - id : int
    - idHoaDon : int
    - idSanPham : int
    - tenSanPham : String
    - soLuong : int
    - donGia : double
    - thanhTien : double
    __
    + ChiTietHoaDon()
    + ChiTietHoaDon(idSanPham, tenSanPham, soLuong, donGia)
    + getId() : int
    + setId(id : int) : void
    + getIdHoaDon() : int
    + setIdHoaDon(id : int) : void
    + getIdSanPham() : int
    + setIdSanPham(id : int) : void
    + getTenSanPham() : String
    + setTenSanPham(s : String) : void
    + getSoLuong() : int
    + setSoLuong(n : int) : void
    + getDonGia() : double
    + setDonGia(d : double) : void
    + getThanhTien() : double
    + setThanhTien(t : double) : void
}

' === QUAN HE ===
NhanVien "0..1" --> "0..1" TaiKhoan : idTaiKhoan
HoaDon "*" --> "1" NhanVien : idNhanVien
HoaDon "*" --> "0..1" KhachHang : idKhachHang\n(NULL = Khach le)
ChiTietHoaDon "*" --> "1" HoaDon : idHoaDon
ChiTietHoaDon "*" --> "1" SanPham : idSanPham

@enduml
